# opensesame-extension-example

./: MANIFEST.in  pyproject.toml  readme.md  setup.py
opensesame_extensions/example/: __init__.py
opensesame_extensions/example/example_extension/: __init__.py  example_extension.py
opensesame_extensions/example_extension/: example_extension.py
